--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title_fr: Acceuil
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner"><!-- keep for anchor link -->
 					<!--<header>
 						<p><a href="{{ site.baseurl }}/services" class="button">Hi. How can I help you?</a>
 						</p>
@@ -72,8 +72,8 @@ title_fr: Acceuil
 				</div>-->
 
 			{% include services.html %}
-			<!-- Carousel -->
-				<section class="carousel">
+			<!-- Carousel - HIDDEN UNTIL SOME POSTS AVAILABLE -->
+				<!--<section class="carousel">
 					<h2>Recent articles</h2>
 					<div class="reel">
 						
@@ -93,7 +93,8 @@ title_fr: Acceuil
 						
 
 					</div>
-				</section>
+				</section>-->
+
 			{% include footer.html %}
 			
 
