--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@ title_fr: Acceuil
 				</div>
 
 			<!-- Banner -->
-				<section id="banner"><!-- keep for anchor link -->
-					<!--<header>
-						<p><a href="{{ site.baseurl }}/services" class="button">Hi. How can I help you?</a>
-						</p>
-					</header>-->
+				<section id="banner">
+					<<header>
+						<p>Serving the local community, working across France and wider afield.</p>
+					</header>
 				</section>
 
 			
@@ -72,8 +71,8 @@ title_fr: Acceuil
 				</div>-->
 
 			{% include services.html %}
-			<!-- Carousel - HIDDEN UNTIL SOME POSTS AVAILABLE -->
-				<!--<section class="carousel">
+			<!-- Carousel -->
+				<section class="carousel">
 					<h2>Recent articles</h2>
 					<div class="reel">
 						
@@ -93,7 +92,7 @@ title_fr: Acceuil
 						
 
 					</div>
-				</section>-->
+				</section>
 
 			{% include footer.html %}
 			
