--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title_fr: Acceuil
 
 			<!-- Banner -->
 				<section id="banner">
-					<<header>
+					<header>
 						<p>Serving the local community, working across France and wider afield.</p>
 					</header>
 				</section>
@@ -69,7 +69,9 @@ title_fr: Acceuil
 					</article>
 
 				</div>-->
-
+				<div class="wrapper style2">
+					{% include cta.html %}
+				</div>
 			{% include services.html %}
 			<!-- Carousel -->
 				<section class="carousel">
