--- a/_pages/services.html
+++ b/_pages/services.html
@@ -31,5 +31,5 @@ image-credit: Image by <a href="https://pixabay.com/users/377053-377053/?utm_sou
 </div>
 
 <br />
-
+{% include cta.html %}
 {% include services.html %}
