--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -13,7 +13,7 @@ hide-cta: hide
 
 <ol>
     <li>How many people (staff and volunteers) work within your organisation?</li>
-    <li>How many people does your organisation directly work with? (Eg.As clients, customers, visitors etc)</li>
+    <li>How many people does your organisation directly work with? (Eg. As clients, customers, visitors etc)</li>
     <li>What is working well for you with regards to IT?</li>
     <li>What would you like to improve? Why?</li>
     <li>How will you know you've succeeded?</li>
@@ -32,6 +32,7 @@ hide-cta: hide
             </header>
         </article>
 </div>
-<p class="center">All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
-
+<article class="col-12">
+    <p class="center">All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
+</article>
 <!-- TO DO: Add form here -->
