--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -31,8 +31,9 @@ hide-cta: hide
                 <h3>Call: <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></h3>
             </header>
         </article>
-</div>
+
 <article class="col-12">
-    <p class="center">All data will be stored and processed in accordance to our <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
+    <p class="center">All data will be stored and processed in accordance to my <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
 </article>
+</div>
 <!-- TO DO: Add form here -->
