--- a/Barebones-3.0.1/index.html
+++ b/Barebones-3.0.1/index.html
@@ -22,6 +22,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/barebones.css">
 
+  <link rel="stylesheet" href="css/skeleton-legacy.css">
+  <link rel="stylesheet" href="css/skeleton-custom.css">
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon-16.png">
