--- a/Barebones-3.0.1/index.html
+++ b/Barebones-3.0.1/index.html
@@ -25,6 +25,13 @@
   <link rel="stylesheet" href="css/skeleton-legacy.css">
   <link rel="stylesheet" href="css/skeleton-custom.css">
 
+    <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <link rel="stylesheet" href="/css/github-prettify-theme.css">
+  <script src="/js/legacy.js"></script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon-16.png">
