--- a/Barebones-3.0.1/index.html
+++ b/Barebones-3.0.1/index.html
@@ -29,8 +29,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-  <link rel="stylesheet" href="/css/github-prettify-theme.css">
-  <script src="/js/legacy.js"></script>
+
+ 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -645,7 +645,7 @@
       </div>
   
     </div>
-  
+    <script src="js/site.js"></script>
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   </body>
