--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default_simple
 title: About
 image: macbook-459196_1280.jpg
 image-alt: Laptop with Google home page showing
