--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default_simple
 title: Contact
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
