--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -20,20 +20,9 @@ hide-cta: hide
     <li>What are your annual budgets for IT and communication?</li>
 </ol>
 
-<div class="row">
-    <article class="col-6 col-12-mobile special">
-<header>
-    <h3>Email: <a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a></h3>
-</header>
-        </article>
-        <article class="col-6 col-12-mobile special">
-            <header>
-                <h3>Call: <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></h3>
-            </header>
-        </article>
 
-<article class="col-12">
-    <p class="center">All data will be stored and processed in accordance to my <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
-</article>
-</div>
-<!-- TO DO: Add form here -->
+<p>Email: <a href="mailto:info@faouetinformatique.fr">info@faouetinformatique.fr</a></p>
+
+<p>Call: <a href="tel:0033662646657">+33 (0)6 62 64 66 57</a></p>
+          
+<p>All data will be stored and processed in accordance to my <a href="{{ site.baseurl }}/privacy-policy" target="_blank">privacy policy</a>.</p>
