--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,9 +7,11 @@ hide-cta: hide
 ---
 <p>Request a no obligation quote or get in touch to discuss your needs.</p>
 
-<h3>Key questions</h3>
+<h3>Quote request</h3>
+<!-- Add zoho form here -->
 
-<p>Please be prepared to answer these questions. Ideally, please put your answers in your initial email.</p>
+Existing site url?
+Preferred site url?
 
 <ol>
     <li>How many people (staff and volunteers) work within your organisation?</li>
