--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -10,3 +10,5 @@ image-credit: Image by <a href="https://pixabay.com/users/stocksnap-894430/?utm_
 ---
 {% include portfolio.html %}
 
+{% include cta.html %}
+
