--- a/_pages/prices.html
+++ b/_pages/prices.html
@@ -48,4 +48,6 @@ Medium organisation (11-50 employees/volunteers and fewer than 500 customers)
 </ul>
 {% endfor %}
 {% endfor %}
+
+{% include cta.html %}
     
